--- a/src/main/resources/templates/rawUI/home.html
+++ b/src/main/resources/templates/rawUI/home.html
@@ -227,10 +227,13 @@
     </table>
     <br/>
     <br/>
+    <div>
     <h1>Product List</h1>
-    <a href="/rawUI/newPhone">Create New Phone</a>
-    <a href="/rawUI/newTablet">Create New Tablet</a>
-    <a href="/rawUI/newLaptop">Create New Phone</a>
+    <a href="/rawUI/products/1">View More</a>
+    </div>
+    <a href="/rawUI/products/newPhone">Create New Phone</a>
+    <a href="/rawUI/products/newTablet">Create New Tablet</a>
+    <a href="/rawUI/products/newLaptop">Create New Phone</a>
     <br/>
     <table>
         <thead>
