add new function warehouse + stock for product

--- a/src/main/resources/templates/rawUI/employee/edit_employee.html
+++ b/src/main/resources/templates/rawUI/employee/edit_employee.html
@@ -15,7 +15,7 @@
             <div class="form-group row">
                 <label class="col-4 col-form-label">E-mail: </label>
                 <div class="col-8">
-                    <input type="email" th:field="*{email}" class="form-control" disabled/>
+                    <input type="email" th:field="*{email}" class="form-control" readonly/>
                 </div>
             </div>
 
